--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,9 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
+
+.center-absolute {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+}
